--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
 
-   <div class="box1"></div>
-   <div class="box2"></div>
-   <div class="box3"></div>
-   <div class="box4"></div>
-   <div class="box5"></div>
-    
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+
+    <div id="fullbox">
+        <div class="black"></div>
+        <div class="green"></div>
+    </div>
+
 </body>
 </html>
